# exhibition

./: .gitignore  MANIFEST.in  Makefile  exhibition@.unit  nginx.conf  pyproject.toml  requirements.in  requirements.txt  systemd.unit
djangocms_exhibition/: cms_plugins.py  models.py
djangocms_exhibition/migrations/: 0001_initial.py  0002_auto_20220727_0709.py  0003_auto_20220727_0741.py  0005_auto_20220823_1907.py
djangocms_exhibition/templates/djangocms_exhibition/: exhibition_object_plugin.html  exhibition_plugin.html
exhibition/: manage.py  requirements.in  requirements.txt
exhibition/django_jigsaw_puzzle/: .babelrc  admin.py  apps.py  cms_plugins.py  models.py  package-lock.json  package.json  urls.py  views.py  webpack.config.js
exhibition/django_jigsaw_puzzle/js_src/: App.jsx  Appbar.jsx  Colors.jsx  CopyrightNotice.jsx  DifficultySelector.jsx  HintDialog.jsx  ImageSelectionPage.jsx  InfoDialog.jsx  JigsawPuzzleApp.jsx  MemoryGame.jsx  MemoryGameApp.jsx  ModalDialog.jsx  PaintGame.jsx  PaintGameApp.jsx  Puzzle.jsx  PuzzlePage.jsx  SaveDialog.jsx  WelcomeScreen.jsx  api.js  common.js  gl.js  index.jsx  museopaint.js  useTimeout.js
exhibition/django_jigsaw_puzzle/migrations/: 0001_initial.py  0002_difficultylevel_name.py  (+16 more)
exhibition/djangocms_exhibition/: admin.py  apps.py  cms_plugins.py  models.py
exhibition/exhibition/: cms_menus.py  settings.py  urls.py  wsgi.py
mysite/: settings.py  urls.py
mysite/migrations/: 0001_initial.py  0002_exhibitionobject.py  0003_delete_exhibitionobject.py  0004_delete_hello.py
mysite/templates/: base.html
(+25 files in other folders)
