[project]
name = "exhibition"
version = "25.01.09"
dynamic = ["dependencies"]

# [project.scripts]
# exhibition = "exhibition.manage:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
# Create separate distribution modules for each app and for static
# files to emulate the way a regular manage.py managed django project works
exhibition_static = "exhibition/static"
exhibition = "exhibition/exhibition"
djangocms_exhibition = "exhibition/djangocms_exhibition"
django_jigsaw_puzzle = "exhibition/django_jigsaw_puzzle"

[tool.setuptools.dynamic]
# Dependencies are read from requirements.txt generate using pip-tools
# compile and sync
dependencies = {file = ["requirements.txt"]}
